@@ -1,23 +1,27 @@
 package hr.algebra.healthyapp.service;
 
-import hr.algebra.healthyapp.HealthyappApplication;
 import hr.algebra.healthyapp.model.Appointment;
 import hr.algebra.healthyapp.model.User;
 import hr.algebra.healthyapp.repository.AppointmentRepository;
 import hr.algebra.healthyapp.repository.UserRepository;
 import hr.algebra.healthyapp.user.Role;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
+import org.testcontainers.containers.PostgreSQLContainer;
 
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest(classes = HealthyappApplication.class)
+@SpringBootTest
 @ActiveProfiles("unit")
 class AppointmentServiceTest {
 
@@ -30,6 +34,25 @@ class AppointmentServiceTest {
     @Autowired
     private AppointmentService appointmentService;
 
+    static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine");
+
+    @BeforeAll
+    public static void beforeAll() {
+        postgres.start();
+    }
+
+    @AfterAll
+    public static void afterAll() {
+        postgres.stop();
+    }
+
+    @DynamicPropertySource
+    static void configureProperties(DynamicPropertyRegistry registry) {
+        registry.add("spring.datasource.url", postgres::getJdbcUrl);
+        registry.add("spring.datasource.username", postgres::getUsername);
+        registry.add("spring.datasource.password", postgres::getPassword);
+    }
+
     private User doctor;
 
     private User patient;
@@ -38,31 +61,31 @@ class AppointmentServiceTest {
 
     @BeforeEach
     public void beforeEach() {
+        appointmentRepository.deleteAll();
+        userRepository.deleteAll();
+
         doctor = User.builder()
-                .firstName("Doctor")
-                .lastName("Doe")
+                .name("Doctor DOe")
                 .email("doctor@example.com")
-                .password("password")
                 .role(Role.ADMIN)
                 .build();
         patient = User.builder()
-                .firstName("John")
-                .lastName("Doe")
+                .name("John Doe")
                 .email("john@example.com")
-                .password("password")
                 .role(Role.USER)
                 .build();
 
         appointment = new Appointment();
         appointment.setDoctor(doctor);
         appointment.setPatient(patient);
+
+        userRepository.save(doctor);
+        userRepository.save(patient);
+        appointmentService.saveAppointment(appointment, appointment.getDoctor().getEmail());
     }
 
     @Test
     void saveAppointment_ValidAppointment_ShouldSaveAppointment() {
-        // Act
-        appointmentService.saveAppointment(appointment, doctor.getEmail());
-
         // Assert
         assertNotNull(appointment.getId());
         Optional<Appointment> savedAppointment = appointmentRepository.findById(appointment.getId());
@@ -72,11 +95,7 @@ class AppointmentServiceTest {
     @Test
     void updateAppointment_ValidAppointment_ShouldUpdateAppointment() {
         // Arrange
-        Appointment appointment = new Appointment();
-        appointment.setId(1L);
         appointment.setAddress("Ilica 12345");
-        appointment.setDoctor(doctor);
-        appointment.setPatient(patient);
 
         // Act
         appointmentService.saveAppointment(appointment, doctor.getEmail());
@@ -91,7 +110,6 @@ class AppointmentServiceTest {
     @Test
     void deleteAppointment_shouldDeleteAppointment() {
         // Arrange
-        appointmentService.saveAppointment(appointment, appointment.getDoctor().getEmail());
         Long appointmentId = appointment.getId();
 
         // Act
@@ -104,7 +122,6 @@ class AppointmentServiceTest {
     @Test
     void getAppointment_shouldReturnOptionalAppointment() {
         // Arrange
-        appointmentService.saveAppointment(appointment, doctor.getEmail());
         Long id = appointment.getId();
 
         // Act
@@ -121,8 +138,8 @@ class AppointmentServiceTest {
         List<Appointment> result = appointmentService.getAppointmentsByUser(doctor.getEmail());
 
         // Assert
-        assertEquals(3, result.size());
-        assertEquals(result.get(0).getDoctor().getEmail(), doctor.getEmail());
+        assertEquals(1, result.size());
+        assertEquals(result.getFirst().getDoctor().getEmail(), doctor.getEmail());
     }
 
     @Test
@@ -131,7 +148,7 @@ class AppointmentServiceTest {
         List<Appointment> result = appointmentService.getAppointmentsByUser(patient.getEmail());
 
         // Assert
-        assertEquals(3, result.size());
-        assertEquals(result.get(0).getPatient().getEmail(), patient.getEmail());
+        assertEquals(1, result.size());
+        assertEquals(result.getFirst().getPatient().getEmail(), patient.getEmail());
     }
 }
